that was not very useful in hindsight but anyway it's done